[project]
name = "yunikorn-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.4.22",
    "cffi==2.0.0",
    "click==8.3.3",
    "cryptography==47.0.0",
    "fastapi==0.136.1",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.13",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "mcp==1.27.0",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pycparser==3.0",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pydantic-settings==2.14.0",
    "pyjwt==2.12.1",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "sse-starlette==3.3.4",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.46.0",
    "yarl==1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
